--- a/ui/package.json
+++ b/ui/package.json
@@ -92,7 +92,7 @@
     "deepmerge": "^4.0.0",
     "doctoc": "^1.4.0",
     "ember-api-actions": "^0.2.8",
-    "ember-auto-import": "^1.10.1",
+    "ember-auto-import": "^2.4.0",
     "ember-basic-dropdown": "3.0.19",
     "ember-basic-dropdown-hover": "0.6.0",
     "ember-cli": "~3.24.0",
@@ -169,7 +169,7 @@
     "qunit": "^2.14.1",
     "qunit-dom": "^1.6.0",
     "route-recognizer": "^0.3.4",
-    "sass": "^1.29.0",
+    "sass": "^1.43.4",
     "sass-svg-uri": "^1.0.0",
     "shell-quote": "^1.6.1",
     "string.prototype.endswith": "^0.2.0",
@@ -177,6 +177,7 @@
     "swagger-ui-dist": "^3.36.2",
     "text-encoder-lite": "2.0.0",
     "walk-sync": "^2.0.2",
+    "webpack": "^5.70.0",
     "xstate": "^3.3.3"
   },
   "optionalDependencies": {
@@ -234,6 +235,8 @@
     ]
   },
   "dependencies": {
+    "@hashicorp/design-system-components": "^0.3.1",
+    "@hashicorp/design-system-tokens": "^0.7.0",
     "handlebars": "^4.3.0",
     "highlight.js": "^10.4.1",
     "js-yaml": "^3.13.1",
