--- a/ui/package.json
+++ b/ui/package.json
@@ -129,6 +129,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-maybe-in-element": "^2.0.3",
     "ember-modal-dialog": "^3.0.3",
+    "ember-modifier": "^3.1.0",
     "ember-page-title": "^6.0.3",
     "ember-power-select": "^5.0.3",
     "ember-promise-helpers": "^1.0.9",
