--- a/ui/package.json
+++ b/ui/package.json
@@ -155,6 +155,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "filesize": "^4.2.1",
     "flat": "^4.1.0",
+    "ivy-codemirror": "IvyApp/ivy-codemirror#fb09333c5144da47e14a9e6260f80577d5408374",
     "jsondiffpatch": "^0.4.1",
     "jsonlint": "^1.6.3",
     "loader.js": "^4.7.0",
