--- a/ui/package.json
+++ b/ui/package.json
@@ -59,7 +59,7 @@
     "@babel/plugin-transform-block-scoping": "^7.12.1",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@ember/test-helpers": "^2.2.5",
+    "@ember/test-helpers": "^2.6.0",
     "@ember/test-waiters": "^3.0.0",
     "@glimmer/component": "^1.0.3",
     "@glimmer/tracking": "^1.0.3",
@@ -92,12 +92,12 @@
     "deepmerge": "^4.0.0",
     "doctoc": "^1.4.0",
     "ember-api-actions": "^0.2.8",
-    "ember-auto-import": "^1.10.1",
+    "ember-auto-import": "^1.12.0",
     "ember-basic-dropdown": "3.0.19",
     "ember-basic-dropdown-hover": "0.6.0",
-    "ember-cli": "~3.24.0",
+    "ember-cli": "~3.28.5",
     "ember-cli-autoprefixer": "^0.8.1",
-    "ember-cli-babel": "^7.23.0",
+    "ember-cli-babel": "^7.26.10",
     "ember-cli-browserstack": "^1.1.0",
     "ember-cli-clipboard": "^0.13.0",
     "ember-cli-content-security-policy": "^1.0.0",
@@ -105,24 +105,24 @@
     "ember-cli-deprecation-workflow": "^2.1.0",
     "ember-cli-element-closest-polyfill": "^0.0.1",
     "ember-cli-flash": "^1.7.2",
-    "ember-cli-htmlbars": "^5.3.1",
-    "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-htmlbars": "^5.7.2",
+    "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-mirage": "^1.1.8",
     "ember-cli-page-object": "^1.17.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "meirish/ember-cli-sri#rooturl",
     "ember-cli-string-helpers": "^4.0.0",
-    "ember-cli-terser": "^4.0.1",
+    "ember-cli-terser": "^4.0.2",
     "ember-composable-helpers": "^4.3.0",
     "ember-concurrency": "^2.1.2",
     "ember-copy": "^1.0.0",
     "ember-cp-validations": "^4.0.0-beta.12",
     "ember-d3": "^0.5.1",
-    "ember-data": "~3.24.0",
+    "ember-data": "~3.28.6",
     "ember-data-model-fragments": "5.0.0-beta.0",
     "ember-engines": "^0.8.3",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^8.0.2",
+    "ember-fetch": "^8.1.1",
     "ember-inflector": "^3.0.0",
     "ember-link-action": "^1.0.0",
     "ember-load-initializers": "^2.1.2",
@@ -130,29 +130,30 @@
     "ember-maybe-in-element": "^2.0.3",
     "ember-modal-dialog": "^3.0.3",
     "ember-modifier": "^3.1.0",
-    "ember-page-title": "^6.0.3",
+    "ember-page-title": "^6.2.2",
     "ember-power-select": "^5.0.3",
     "ember-promise-helpers": "^1.0.9",
-    "ember-qunit": "^5.1.4",
+    "ember-qunit": "^5.1.5",
     "ember-radio-button": "^2.0.1",
-    "ember-resolver": "^8.0.2",
+    "ember-resolver": "^8.0.3",
     "ember-responsive": "^3.0.0-beta.3",
     "ember-router-helpers": "^0.4.0",
     "ember-service-worker": "meirish/ember-service-worker#configurable-scope",
     "ember-sinon": "^4.0.0",
-    "ember-source": "~3.24.0",
+    "ember-source": "~3.28.8",
     "ember-svg-jar": "^2.1.0",
-    "ember-template-lint": "^3.14.0",
+    "ember-template-lint": "^3.15.0",
     "ember-test-selectors": "^2.1.0",
     "ember-tether": "^2.0.1",
     "ember-truth-helpers": "^2.1.0",
     "ember-wormhole": "^0.5.5",
     "escape-string-regexp": "^2.0.0",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-ember": "^10.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-ember": "^10.5.8",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-qunit": "^6.2.0",
     "filesize": "^4.2.1",
     "flat": "^4.1.0",
     "ivy-codemirror": "IvyApp/ivy-codemirror#fb09333c5144da47e14a9e6260f80577d5408374",
@@ -164,10 +165,10 @@
     "npm-run-all": "^4.1.5",
     "pkijs": "^2.2.2",
     "pretender": "^3.4.3",
-    "prettier": "^2.2.1",
+    "prettier": "^2.5.1",
     "prettier-eslint-cli": "^5.0.0",
     "pvutils": "^1.0.17",
-    "qunit": "^2.14.1",
+    "qunit": "^2.17.2",
     "qunit-dom": "^1.6.0",
     "route-recognizer": "^0.3.4",
     "sass": "^1.29.0",
@@ -218,7 +219,7 @@
     "@hashicorp/ember-flight-icons": "^1.1.0"
   },
   "engines": {
-    "node": "14.*"
+    "node": "16.*"
   },
   "ember": {
     "edition": "octane"
