--- a/ui/package.json
+++ b/ui/package.json
@@ -160,7 +160,7 @@
     "jsondiffpatch": "^0.4.1",
     "jsonlint": "^1.6.3",
     "loader.js": "^4.7.0",
-    "node-sass": "^4.10.0",
+    "node-sass": "6.0.1",
     "normalize.css": "4.1.1",
     "npm-run-all": "^4.1.5",
     "pkijs": "^2.2.2",
