--- a/ui/package.json
+++ b/ui/package.json
@@ -107,7 +107,7 @@
     "ember-cli-flash": "^1.7.2",
     "ember-cli-htmlbars": "^5.7.2",
     "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-mirage": "^1.1.8",
+    "ember-cli-mirage": "2.4.0",
     "ember-cli-page-object": "^1.17.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "meirish/ember-cli-sri#rooturl",
@@ -115,7 +115,7 @@
     "ember-cli-terser": "^4.0.2",
     "ember-composable-helpers": "^4.3.0",
     "ember-concurrency": "^2.1.2",
-    "ember-copy": "^1.0.0",
+    "ember-copy": "2.0.1",
     "ember-cp-validations": "^4.0.0-beta.12",
     "ember-d3": "^0.5.1",
     "ember-data": "~3.28.6",
@@ -123,12 +123,12 @@
     "ember-engines": "^0.8.3",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
-    "ember-inflector": "^3.0.0",
+    "ember-inflector": "4.0.2",
     "ember-link-action": "^1.0.0",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-maybe-in-element": "^2.0.3",
-    "ember-modal-dialog": "^3.0.3",
+    "ember-modal-dialog": "4.0.0",
     "ember-modifier": "^3.1.0",
     "ember-page-title": "^6.2.2",
     "ember-power-select": "^5.0.3",
@@ -143,10 +143,10 @@
     "ember-source": "~3.28.8",
     "ember-svg-jar": "^2.1.0",
     "ember-template-lint": "^3.15.0",
-    "ember-test-selectors": "^2.1.0",
+    "ember-test-selectors": "6.0.0",
     "ember-tether": "^2.0.1",
-    "ember-truth-helpers": "^2.1.0",
-    "ember-wormhole": "^0.5.5",
+    "ember-truth-helpers": "3.0.0",
+    "ember-wormhole": "0.6.0",
     "escape-string-regexp": "^2.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
