upgrades ember-template-lint and adds prettier plugin

--- a/ui/package.json
+++ b/ui/package.json
@@ -139,7 +139,8 @@
     "ember-sinon": "^4.0.0",
     "ember-source": "~3.28.8",
     "ember-svg-jar": "^2.1.0",
-    "ember-template-lint": "^3.15.0",
+    "ember-template-lint": "4.3.0",
+    "ember-template-lint-plugin-prettier": "4.0.0",
     "ember-test-selectors": "^2.1.0",
     "ember-tether": "^2.0.1",
     "ember-truth-helpers": "3.0.0",
@@ -162,7 +163,7 @@
     "npm-run-all": "^4.1.5",
     "pkijs": "^2.2.2",
     "pretender": "^3.4.3",
-    "prettier": "^2.5.1",
+    "prettier": "2.6.1",
     "prettier-eslint-cli": "^5.0.0",
     "pvutils": "^1.0.17",
     "qunit": "^2.17.2",
