--- a/ui/package.json
+++ b/ui/package.json
@@ -113,7 +113,7 @@
     "ember-cli-sri": "meirish/ember-cli-sri#rooturl",
     "ember-cli-string-helpers": "^4.0.0",
     "ember-cli-terser": "^4.0.1",
-    "ember-composable-helpers": "^4.3.0",
+    "ember-composable-helpers": "4.4.1",
     "ember-concurrency": "^2.1.2",
     "ember-copy": "^1.0.0",
     "ember-cp-validations": "^4.0.0-beta.12",
@@ -143,7 +143,7 @@
     "ember-source": "~3.24.0",
     "ember-svg-jar": "^2.1.0",
     "ember-template-lint": "^3.14.0",
-    "ember-test-selectors": "^2.1.0",
+    "ember-test-selectors": "4.0.0",
     "ember-tether": "^2.0.1",
     "ember-truth-helpers": "^2.1.0",
     "ember-wormhole": "^0.5.5",
