--- a/ui/package.json
+++ b/ui/package.json
@@ -217,7 +217,7 @@
     "@hashicorp/ember-flight-icons": "^1.1.0"
   },
   "engines": {
-    "node": "16.*"
+    "node": "12.* || 14.* || >= 16"
   },
   "ember": {
     "edition": "octane"
