--- a/website/Makefile
+++ b/website/Makefile
@@ -15,6 +15,7 @@ DOCKER_RUN_FLAGS=-it \
 		--volume "$(PWD)/.env:/app/.env" \
 		-e "REPO=vault"
 
+# Default: run this if working on the website locally to run in watch mode.
 .PHONY: website
 website:
 	@echo "==> Downloading latest Docker image..."
@@ -22,13 +23,16 @@ website:
 	@echo "==> Starting website..."
 	@docker run $(DOCKER_RUN_FLAGS) $(DOCKER_IMAGE)
 
+# Use this if you have run `website/build-local` to use the locally built image.
 .PHONY: website/local
 website/local:
 	@echo "==> Starting website from local image..."
 	@docker run $(DOCKER_RUN_FLAGS) $(DOCKER_IMAGE_LOCAL)
 
+# Run this to generate a new local Docker image.
 .PHONY: website/build-local
 website/build-local:
 	@echo "==> Building local Docker image"
 	@docker build https://github.com/hashicorp/dev-portal.git\#main \
 		-t $(DOCKER_IMAGE_LOCAL)
+
