--- a/ui/package.json
+++ b/ui/package.json
@@ -107,10 +107,10 @@
     "ember-cli-htmlbars": "^5.7.2",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-mirage": "2.4.0",
-    "ember-cli-page-object": "^1.17.0",
+    "ember-cli-page-object": "1.17.9",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "meirish/ember-cli-sri#rooturl",
-    "ember-cli-string-helpers": "^4.0.0",
+    "ember-cli-string-helpers": "6.1.0",
     "ember-cli-terser": "^4.0.2",
     "ember-composable-helpers": "^4.3.0",
     "ember-concurrency": "^2.1.2",
@@ -141,7 +141,7 @@
     "ember-svg-jar": "^2.1.0",
     "ember-template-lint": "4.3.0",
     "ember-template-lint-plugin-prettier": "4.0.0",
-    "ember-test-selectors": "^2.1.0",
+    "ember-test-selectors": "6.0.0",
     "ember-tether": "^2.0.1",
     "ember-truth-helpers": "3.0.0",
     "ember-wormhole": "0.6.0",
