--- a/ui/package.json
+++ b/ui/package.json
@@ -91,7 +91,7 @@
     "ember-cli": "~3.28.5",
     "ember-cli-autoprefixer": "^0.8.1",
     "ember-cli-babel": "^7.26.10",
-    "ember-cli-browserstack": "^1.1.0",
+    "ember-cli-browserstack": "2.0.1",
     "ember-cli-clipboard": "^0.13.0",
     "ember-cli-content-security-policy": "^1.0.0",
     "ember-cli-dependency-checker": "^3.2.0",
