--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -846,7 +846,13 @@ jobs:
           BASE: https://github.com/CircleCI-Public/circleci-cli/releases/download
         name: Install CircleCI CLI
     - run:
-        command: make ci-verify
+        command: |
+          export CCI_PATH=/tmp/circleci-cli/$CIRCLECI_CLI_VERSION
+          echo "export PATH=$CCI_PATH:\$PATH" >> $BASH_ENV
+          set -x
+          . $BASH_ENV
+          make ci-verify
+        name: Verify CircleCI
     - add_ssh_keys:
         fingerprints:
         - 0e:03:77:f4:e2:c3:56:c2:53:6a:03:e1:31:91:2f:06
