backport of commit fbc81abf88391daea116339ab7108472bb261b2c

--- a/.circleci/config/jobs/pre-flight-checks.yml
+++ b/.circleci/config/jobs/pre-flight-checks.yml
@@ -28,9 +28,8 @@ steps:
       name: Verify CircleCI
       command: |
         export CCI_PATH=/tmp/circleci-cli/$CIRCLECI_CLI_VERSION
-        echo "export PATH=$CCI_PATH:\$PATH" >> $BASH_ENV
+        export PATH=$CCI_PATH:$PATH
         set -x
-        . $BASH_ENV
         make ci-verify
   - configure-git
   - refresh_go_mod_cache
