backport of commit cde1d5ee98a5ad381bc8e6d263c4424d85c0311d

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -851,9 +851,8 @@ jobs:
     - run:
         command: |
           export CCI_PATH=/tmp/circleci-cli/$CIRCLECI_CLI_VERSION
-          echo "export PATH=$CCI_PATH:\$PATH" >> $BASH_ENV
+          export PATH=$CCI_PATH:$PATH
           set -x
-          . $BASH_ENV
           make ci-verify
         name: Verify CircleCI
     - add_ssh_keys:
