backport of commit 36f06ee335f1a4ccfc1d179297a14ddd0b768fc6

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -850,9 +850,8 @@ jobs:
         name: Install CircleCI CLI
     - run:
         command: |
-          export CCI_PATH=/tmp/circleci-cli/$CIRCLECI_CLI_VERSION
-          export PATH=$CCI_PATH:$PATH
           set -x
+          . $BASH_ENV
           make ci-verify
         name: Verify CircleCI
     - add_ssh_keys:
