Try harder to get downloads right

--- a/.circleci/config/commands/@caches.yml
+++ b/.circleci/config/commands/@caches.yml
@@ -18,9 +18,9 @@ restore_go_mod_cache_permissive:
     - restore_cache:
         name: Restore closest matching go modules cache
         keys:
-          - &gocachekey v1.4-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}-{{checksum "api/go.sum"}}
-          -             v1.4-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}
-          -             v1.4-{{checksum "go.sum"}}
+          - &gocachekey v1.5-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}-{{checksum "api/go.sum"}}
+          -             v1.5-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}
+          -             v1.5-{{checksum "go.sum"}}
 restore_go_mod_cache:
   steps:
     - restore_cache:
@@ -47,6 +47,8 @@ refresh_go_mod_cache:
           go mod download -json
           ( cd sdk && go mod download -json; )
           ( cd api && go mod download -json; )
+          # try really, really, really hard to download everything
+          (go mod graph | cut -d' ' -f1; go mod graph | cut -d' ' -f2) | sort | uniq | xargs go mod download -json
     - run:
         name: Verify downloading modules did not modify any files
         command: |
