--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -856,11 +856,13 @@ jobs:
           # code generation in later builds that rely on this module cache.
           go list ./...
           # try really, really, really hard to download everything
+          touch deps.json
           for dir in $(find . -name go.mod | xargs -n 1 dirname); do
             pushd $dir;
-            go mod download -json;
+            go mod download -json >> deps.json
             popd;
           done
+          jq -c '[.Path,.Version]' deps.json | sort | uniq
         name: go mod download
     - run:
         command: |
