--- a/.circleci/config/commands/@caches.yml
+++ b/.circleci/config/commands/@caches.yml
@@ -18,9 +18,9 @@ restore_go_mod_cache_permissive:
     - restore_cache:
         name: Restore closest matching go modules cache
         keys:
-          - &gocachekey v1.7-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}-{{checksum "api/go.sum"}}
-          -             v1.7-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}
-          -             v1.7-{{checksum "go.sum"}}
+          - &gocachekey v1.8-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}-{{checksum "api/go.sum"}}
+          -             v1.8-{{checksum "go.sum"}}-{{checksum "sdk/go.sum"}}
+          -             v1.8-{{checksum "go.sum"}}
 restore_go_mod_cache:
   steps:
     - restore_cache:
@@ -50,6 +50,8 @@ refresh_go_mod_cache:
             pushd $dir;
             go list ./...
             go mod download -json >> deps.json
+            go mod vendor -v -o /tmp/vendor 2>&1 | grep -ve '^#' | xargs go mod download -json >> deps.json
+            rm -rf /tmp/vendor
             popd;
           done
           jq -c '[.Path,.Version]' deps.json | sort | uniq
