Undocumented go mod download all command does not accept -json

--- a/.circleci/config/commands/@caches.yml
+++ b/.circleci/config/commands/@caches.yml
@@ -49,8 +49,8 @@ refresh_go_mod_cache:
           for dir in $(find . -name go.mod | xargs -n 1 dirname); do
             pushd $dir;
             go list ./...
+            go mod download all
             go mod download -json >> deps.json
-            go mod download all -json >> deps.json
             rm -rf /tmp/vendor
             popd;
           done
