Ignore failure on go get; needed for sdk

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -859,7 +859,7 @@ jobs:
           touch deps.json
           for dir in $(find . -name go.mod | xargs -n 1 dirname); do
             pushd $dir;
-            go get .
+            go get . || true
             go mod download all
             go mod download -json >> deps.json
             rm -rf /tmp/vendor
