--- a/.circleci/config/jobs/test-ui.yml
+++ b/.circleci/config/jobs/test-ui.yml
@@ -1,34 +1,30 @@
-executor: node
-resource_class: xlarge
+docker:
+  - image: docker.mirror.hashicorp.services/circleci/node:14-browsers
+    environment:
+      # See https://git.io/vdao3 for details.
+      JOBS: 2
 steps:
-  # - exit-if-branch-does-not-need-test-ui
   - checkout
-  - restore_yarn_cache
-  - attach_workspace:
-      at: .
+  - restore_cache:
+      keys:
+        - v3-deps-{{ checksum "ui/yarn.lock" }}
   - run:
-      name: Test UI
-      command: |
-        set -x
-
-        # Install Chrome
-        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub \
-          | apt-key add -
-        echo "deb http://dl.google.com/linux/chrome/deb/ stable main" \
-          | tee /etc/apt/sources.list.d/google-chrome.list
-        apt-get update
-        apt-get -y install google-chrome-stable
-        rm /etc/apt/sources.list.d/google-chrome.list
-        rm -rf /var/lib/apt/lists/* /var/cache/apt/*
-
-        # Add ./bin to the PATH so vault binary can be run by Ember tests
-        export PATH="${PWD}/bin:${PATH}"
-
-        # Run Ember tests
-        cd ui
-        mkdir -p test-results/qunit
-        yarn test:oss
-  - store_artifacts:
-      path: ui/test-results
+      name: yarn install
+      command: cd ui && yarn install# --frozen-lockfile
+  - save_cache:
+      key: v3-deps-{{ checksum "ui/yarn.lock" }}
+      paths:
+        - ./ui/node_modules
+  # - run:
+  #     name: lint:js
+  #     command: cd ui && yarn run lint:js
+  # - run:
+  #     name: lint:hbs
+  #     command: cd ui && yarn run lint:hbs
+  - run:
+      name: Ember tests
+      command: mkdir -p test-results/qunit && cd ui && yarn test:oss
   - store_test_results:
+      path: ui/test-results
+  - store_artifacts:
       path: ui/test-results
