i have no idea what im doing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,13 @@ jobs:
     - restore_cache:
         keys:
         - v3-deps-{{ checksum "ui/yarn.lock" }}
+    - run:
+        command: cd ui && yarn install && npm rebuild node-sass
+        name: yarn install
+    - run:
+        command: |
+          export PATH="${PWD}/bin:${PATH}"
+        name: Install UI dependencies
     - save_cache:
         key: v3-deps-{{ checksum "ui/yarn.lock" }}
         paths:
