Support dev image building/publishing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -252,6 +252,9 @@ jobs:
           tags: |
             docker.io/hashicorp/${{env.repo}}:${{env.version}}
             public.ecr.aws/hashicorp/${{env.repo}}:${{env.version}}
+          dev_tags: |
+            hashicorppreview/${{ env.repo }}:${{ env.version }}-dev
+            docker.io/hashicorppreview/${{ env.repo }}:${{ env.version }}-${{ github.sha }}
 
   build-ubi:
     name: Red Hat UBI ${{ matrix.arch }} build
