update to match version on main

--- a/.release/docker/Dockerfile.official
+++ b/.release/docker/Dockerfile.official
@@ -5,7 +5,7 @@
 FROM alpine:3.14
 
 # This is the release of Vault to pull in.
-ARG VAULT_VERSION=1.10.3
+ARG VAULT_VERSION=1.11.0-dev1
 
 # Create a vault user and group first so the IDs get set the same way,
 # even as the rest of this may change over time.
