--- a/ui/package.json
+++ b/ui/package.json
@@ -97,7 +97,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deprecation-workflow": "^2.1.0",
     "ember-cli-element-closest-polyfill": "^0.0.1",
-    "ember-cli-flash": "^1.7.2",
+    "ember-cli-flash": "2.1.2",
     "ember-cli-htmlbars": "^5.7.2",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-mirage": "2.4.0",
