--- a/.circleci/config/workflows/ci.yml
+++ b/.circleci/config/workflows/ci.yml
@@ -14,6 +14,10 @@ jobs:
         # Only main, UI, release and merge branches need to run UI tests.
         # We don't filter here however because test-ui is configured in github as
         # required so it must run, instead we short-circuit within test-ui.
+  - trigger-test-ui:
+      requires:
+        - install-ui-dependencies
+        - build-go-dev
   - test-ui-browserstack:
       requires:
         - install-ui-dependencies
@@ -39,5 +43,5 @@ jobs:
       requires:
         - pre-flight-checks
   - semgrep:
-       requires:
-         - pre-flight-checks
+      requires:
+        - pre-flight-checks
