updates deps and build to exclude deprecated core-js version and adds eslint compatibility plugin

--- a/ui/package.json
+++ b/ui/package.json
@@ -86,7 +86,7 @@
     "deepmerge": "^4.0.0",
     "doctoc": "^1.4.0",
     "ember-api-actions": "^0.2.8",
-    "ember-auto-import": "^1.12.0",
+    "ember-auto-import": "2.4.2",
     "ember-basic-dropdown": "4.0.3",
     "ember-cli": "~3.28.5",
     "ember-cli-autoprefixer": "^0.8.1",
@@ -96,7 +96,6 @@
     "ember-cli-content-security-policy": "^1.0.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deprecation-workflow": "^2.1.0",
-    "ember-cli-element-closest-polyfill": "^0.0.1",
     "ember-cli-flash": "^1.7.2",
     "ember-cli-htmlbars": "^5.7.2",
     "ember-cli-inject-live-reload": "^2.1.0",
@@ -118,7 +117,6 @@
     "ember-inflector": "4.0.2",
     "ember-link-action": "^1.0.0",
     "ember-load-initializers": "^2.1.2",
-    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-maybe-in-element": "^2.0.3",
     "ember-modal-dialog": "4.0.0",
     "ember-modifier": "^3.1.0",
@@ -142,6 +140,7 @@
     "escape-string-regexp": "^2.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-compat": "4.0.2",
     "eslint-plugin-ember": "^10.5.8",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
@@ -171,6 +170,7 @@
     "swagger-ui-dist": "^3.36.2",
     "text-encoder-lite": "2.0.0",
     "walk-sync": "^2.0.2",
+    "webpack": "5.73.0",
     "xstate": "^3.3.3"
   },
   "optionalDependencies": {
